fix design, implement get winners api
